Nav image invisible spacing fix

--- a/css/master.css
+++ b/css/master.css
@@ -84,6 +84,9 @@ p,a,h1,h2 { /*Nick T*/
   width: 152px;
   height: 60px;
   padding: 4px 0px;
+
+  /* Removes invisible spacing under nav image */
+  display: block;
 }
 
 .nav-bar > div {
